--- a/Analytical_instrumentation/Pulsed_laser_visualization.ipynb
+++ b/Analytical_instrumentation/Pulsed_laser_visualization.ipynb
@@ -143,7 +143,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "jyu_learn",
    "language": "python",
    "name": "python3"
   },
